[package]
name = "heaparray"
version = "0.4.3"
authors = ["Albert Liu <albertymliu@gmail.com>"]
edition = "2018"
repository = "https://github.com/A1Liu/heaparray-rs"
description = "Flexible support for dynamically-sized types, using heap-allocated array of structs"
readme = "README.md"
keywords = ["array", "heap", "dynamically-sized-types"]
categories = ["data-structures", "memory-management"]
license = "MIT"

[dependencies]
# containers-rs = "^0.5.0"
const-utils = "0.1.1"
atomic-types = "0.1.0"

[dev-dependencies]
interloc = "0.1.0"

[features]
default = []

# does what it says on the tin - removes all assertions; this can cause undefined behavior.
no-asserts = ["mem-block-fast-alloc"]

# Features related to `MemBlock`. See the documentation on `MemBlock` for more details.
mem-block-fast-alloc = ["mem-block-skip-layout-check","mem-block-allow-null", "mem-block-skip-size-check"]
mem-block-skip-size-check = []
mem-block-skip-layout-check = []
mem-block-allow-null = []
